--- a/zh-kr/index.html
+++ b/zh-kr/index.html
@@ -91,7 +91,7 @@
     <div class="search-dropdown mobile">
         <div id="search-dropdown-mobile"></div>
     </div><main class="main">
-                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><a href="/zh-kr/posts/" title="게시물"><img
+                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div class="home-avatar"><a href="/zh-kr/posts/" title="게시물"><img
         class="lazyload"
         src="/svg/loading.min.svg"
         data-src="/img/profile/%ec%95%bc%ea%b7%bc%ea%b3%b0.png"
@@ -99,8 +99,6 @@
         data-sizes="auto"
         alt="/img/profile/야근곰.png"
         title="/img/profile/야근곰.png" /></a></div><h1 class="home-title">주니어 개발자 블로그 🧑🏻‍💻</h1><div class="home-subtitle"><div id="id-1" class="typeit"></div></div><div class="links"><a href="https://github.com/ChoiSeungWoo98" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github fa-fw" aria-hidden="true"></i></a><a href="https://www.instagram.com/_clo.or" title="Instagram" target="_blank" rel="noopener noreffer me"><i class="fab fa-instagram fa-fw" aria-hidden="true"></i></a><a href="mailto:developer_seung_woo@naver.com" title="Email" rel="me"><i class="far fa-envelope fa-fw" aria-hidden="true"></i></a><a href="/zh-kr/index.xml" title="RSS" target="_blank" rel="noopener noreffer me"><i class="fas fa-rss fa-fw" aria-hidden="true"></i></a></div></div>
-
-
 </div></div>
             </main><footer class="footer">
         <div class="footer-container"><div class="footer-line">Powered by <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.110.0">Hugo</a> | Theme - <a href="https://github.com/dillonzq/LoveIt" target="_blank" rel="noopener noreffer" title="LoveIt 0.2.11"><i class="far fa-kiss-wink-heart fa-fw" aria-hidden="true"></i> LoveIt</a>
