--- a/index.html
+++ b/index.html
@@ -46,9 +46,6 @@
                         </span>
                     </span><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                     <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
-                </a><a href="javascript:void(0);" class="menu-item language" title="Select Language">
-                    <i class="fa fa-globe" aria-hidden="true"></i>                      
-                    <select class="language-select" id="language-select-desktop" onchange="location = this.value;"><option value="/" selected>English</option><option value="/zh-kr/">한국어</option></select>
                 </a></div>
         </div>
     </div>
@@ -80,10 +77,7 @@
                     </a>
                 </div><a class="menu-item" href="/posts/" title="">Posts</a><a class="menu-item" href="/tags/" title="">Tags</a><a class="menu-item" href="/categories/" title="">Categories</a><a class="menu-item" href="/categories/documentation/" title="">Docs</a><a class="menu-item" href="/about/" title="">About</a><a class="menu-item" href="https://github.com/ChoiSeungWoo98" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw' aria-hidden='true'></i></a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                 <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
-            </a><a href="javascript:void(0);" class="menu-item" title="Select Language">
-                    <i class="fa fa-globe fa-fw" aria-hidden="true"></i>
-                    <select class="language-select" onchange="location = this.value;"><option value="/" selected>English</option><option value="/zh-kr/">한국어</option></select>
-                </a></div>
+            </a></div>
     </div>
 </header><div class="search-dropdown desktop">
         <div id="search-dropdown-desktop"></div>
@@ -91,8 +85,7 @@
     <div class="search-dropdown mobile">
         <div id="search-dropdown-mobile"></div>
     </div><main class="main">
-                <div class="container"><div class="page home" data-home="posts"><div class="home-profile">
-    <div class="home-avatar">
+                <div class="container"><div class="page home" data-home="posts"><div>
         <div class="sub-title" style="position: absolute;">
             <h3>#꾸준히 공부하기</h3>
             <h3>#여러 분야 책 읽기</h3>
@@ -101,7 +94,19 @@
         </div>
         <div class="div-character-webp">
             <a class="character-webp"></a>
-        </div><div class="home-avatar"><a href="/posts/" title="Posts"><img
+        </div>
+    </div>
+    <div class="home-profile">
+    <div class="home-avatar">
+
+
+
+
+
+
+
+
+<div class="home-avatar"><a href="/posts/" title="Posts"><img
         class="lazyload"
         src="/svg/loading.min.svg"
         data-src="/img/profile/%ec%95%bc%ea%b7%bc%ea%b3%b0.jpg"
@@ -138,10 +143,11 @@
     @media (max-width: 1149px) {
         .div-character-webp{
             position: relative;
+            text-align: right;
         }
         .character-webp {
             zoom: 0.7;
-            margin-left: 150px;
+            margin-right: -120px;
             display: inline-block;
             width: 360px;
             height: 400px;
@@ -152,7 +158,7 @@
 
         .sub-title{
             display: inline-block;
-            margin-left: -130px;
+            text-align: left;
         }
 
         .sub-title > h3 {
@@ -161,6 +167,15 @@
             margin-left: -60px;
             margin-top: 25px;
             opacity: 30%;
+        }
+    }
+
+    @media (max-width: 680px) {
+        .sub-title {
+            margin-left: 80px;
+        }
+        .sub-title > h3{
+            white-space: nowrap;
         }
     }
 
