--- a/깃_블로그_만들기/index.html
+++ b/깃_블로그_만들기/index.html
@@ -152,7 +152,7 @@ Jekyll"/>
     <p style="font-weight: bold;">Jekyll</p>
     <ul>
         <li>Ruby 기반</li>
-        <li>vGitHub Page에 최적화되어 있음</li>
+        <li>GitHub Page에 최적화되어 있음</li>
         <li>현재 가장 대중적으로 사용하는 플랫폼</li>
         <li>한글 레퍼런스가 제일 많음</li>
         <li>빌드를 진행하는데 너무 오래걸림</li>
@@ -599,7 +599,7 @@ ex) <code>blog</code>, <code>&lt;username&gt;.github.io</code></p>
             </noscript></div></article></div>
             </main><footer class="footer">
         <div class="footer-container"><div class="footer-line">Powered by <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.111.3">Hugo</a> | Theme - <a href="https://github.com/dillonzq/LoveIt" target="_blank" rel="noopener noreffer" title="LoveIt 0.2.11"><i class="far fa-kiss-wink-heart fa-fw" aria-hidden="true"></i> LoveIt</a>
-                </div><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2020 - 2023</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank"></a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://github.com/ChoiSeungWoo98" target="_blank">개발 기록</a></span></div>
+                </div><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2020 - 2024</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank"></a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://github.com/ChoiSeungWoo98" target="_blank">개발 기록</a></span></div>
         </div>
     </footer></div>
 
