--- a/aws기초/index.html
+++ b/aws기초/index.html
@@ -6,7 +6,8 @@
         <meta name="robots" content="noodp" />
         <title>AWS 기초 실습 - 승우의 개발 일기🧑🏻‍💻</title><meta name="Description" content="Hugo theme - LoveIt"><meta property="og:title" content="AWS 기초 실습" />
 <meta property="og:description" content=" 오늘은 AWS 개인미션 실습을 진행해보고자 한다.
-가장 기초적인 vm, storage, db를 생성해보고 사용해보는 미션이었다. AWS에서 EC2, S3, RDS를 이용해서 각각 AM, Storage, DB를 만들어 보고자 한다.
+가장 기초적인 vm, storage, db를 생성해보고 사용해보는 미션이었다.
+AWS에서 EC2, S3, RDS를 이용해서 각각 AM, Storage, DB를 만들어 보고자 한다.
 VM(Virtual Machine : 가삼 머신) " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://choiseungwoo98.github.io/aws%E1%84%80%E1%85%B5%E1%84%8E%E1%85%A9/" /><meta property="og:image" content="https://choiseungwoo98.github.io/logo.png"/><meta property="article:section" content="posts" />
@@ -17,7 +18,8 @@ VM(Virtual Machine : 가삼 머신) " />
 
 <meta name="twitter:title" content="AWS 기초 실습"/>
 <meta name="twitter:description" content=" 오늘은 AWS 개인미션 실습을 진행해보고자 한다.
-가장 기초적인 vm, storage, db를 생성해보고 사용해보는 미션이었다. AWS에서 EC2, S3, RDS를 이용해서 각각 AM, Storage, DB를 만들어 보고자 한다.
+가장 기초적인 vm, storage, db를 생성해보고 사용해보는 미션이었다.
+AWS에서 EC2, S3, RDS를 이용해서 각각 AM, Storage, DB를 만들어 보고자 한다.
 VM(Virtual Machine : 가삼 머신) "/>
 <meta name="application-name" content="승우의 개발 일기🧑🏻‍💻">
 <meta name="apple-mobile-web-app-title" content="승우의 개발 일기🧑🏻‍💻"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="/img/favicons/favicon.ico"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://choiseungwoo98.github.io/aws%E1%84%80%E1%85%B5%E1%84%8E%E1%85%A9/" /><link rel="prev" href="https://choiseungwoo98.github.io/linux_%E1%84%80%E1%85%B5%E1%84%8E%E1%85%A9/" /><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -119,7 +121,7 @@ VM(Virtual Machine : 가삼 머신) "/>
 </nav></div>
             </div><div class="content" id="content"><blockquote>
 <p>오늘은 AWS 개인미션 실습을 진행해보고자 한다.<br>
-가장 기초적인 vm, storage, db를 생성해보고 사용해보는 미션이었다.
+가장 기초적인 vm, storage, db를 생성해보고 사용해보는 미션이었다.<br>
 AWS에서 EC2, S3, RDS를 이용해서 각각 AM, Storage, DB를 만들어 보고자 한다.</p>
 </blockquote>
 <h2 id="vmvirtual-machine--가삼-머신">VM(Virtual Machine : 가삼 머신)</h2>
